--- a/meetings/20141007.md
+++ b/meetings/20141007.md
@@ -29,6 +29,17 @@
 
 	* Got Vehicle Ownership data from 2000 Census and 2008-2012 ACS. 
 
+
+####Misc
+* [Woods Hole US Biomass] (http://www.arcgis.com/home/webmap/viewer.html?webmap=f7535ebbb05b4eaf8ef019dbeb42be19)
+This map represents year 2000 baseline estimate of above ground live dry biomass and standing carbon stock for the lower 48 United States.
+
+* The accompanying dataset was produced as part of a project funded under NASA’s Terrestrial Ecology Program and titled “The National Biomass and Carbon Dataset 2000 (NBCD 2000): A High Spatial Resolution Baseline to Reduce Uncertainty in Carbon Accounting and Flux Modeling.” The main objective of the project was to generate a high-resolution (30 m), year-2000 baseline estimate of basal area-weighted canopy height, aboveground live dry biomass, and standing carbon stock for the conterminous (lower 48) United States. Development of the dataset is based on an empirical modeling approach that combines USDA Forest Service Forest Inventory and Analysis (FIA) data with high-resolution InSAR data acquired from the 2000 Shuttle Radar Topography Mission (SRTM) and optical remote sensing data acquired from the Landsat ETM+ sensor. Three-season Landsat ETM+ data were systematically compiled by the Multi-Resolution Land Characteristics Consortium (MRLC) between 1999 and 2002 for the entire U.S. and were the foundation for development of both the USGS National Land Cover Dataset 2001 (NLCD 2001) and the Landscape Fire and Resource Management Planning Tools Project (LANDFIRE). Products from both the NLCD 2001 (landcover and canopy density) and LANDFIRE (existing vegetation type) projects as well as topographic information from the USGS National Elevation Dataset (NED) are used within the NBCD 2000 project as spatial predictor layers for canopy height and biomass estimation. Forest survey data provided by the USDA Forest Service FIA program were made available to the project under a national Memorandum of Understanding. The response variables (canopy height and biomass) used in model development and validation were derived from the FIA database (FIADB). Production of the NLCD 2001 and LANDFIRE projects was based on a mapping zone approach in which the conterminous U.S. is split into 66 ecoregionally distinct mapping zones. This mapping zone approach was also adopted by the NBCD 2000 project. 
+
+* Biomass 30m resolution. Digital numbers are in megagrams (Mg) of Aboveground Live Woody Biomass per Hectare (Mg/Ha)
+
+
+
 ---
 ##20140930
 
