--- a/meetings/20141007.md
+++ b/meetings/20141007.md
@@ -29,6 +29,8 @@
 
 	* Got Vehicle Ownership data from 2000 Census and 2008-2012 ACS. 
 
+####Walkability Comments
+* Rochdale/Locust Manor seems to be the biggest change. 
 
 ####Misc
 * [Woods Hole US Biomass] (http://www.arcgis.com/home/webmap/viewer.html?webmap=f7535ebbb05b4eaf8ef019dbeb42be19)
