--- a/meetings/20141007.md
+++ b/meetings/20141007.md
@@ -8,10 +8,11 @@
 	 * 350 other addresses. School addresses and post enrollment address. 45 monitoring sites. 
 * 2) Kate will be sending out a wish list of variables.
 	Tree, Traffic, Census, ask about Walkability, etc. NAAAS
-* 3) Will we be getting the Black Carbon dataset (from NYCCAS) by a finer time interval (month/week) or should we just use the 2-year avg? 
+* 3) Will we be getting the Black Carbon dataset (from NYCCAS) by a finer time interval (month/week) or should we just use the 2-year avg? #
+	* point nearest to hoem
 
 ####MSM
-* 4) Called up James yesterday, he created the jittered point shapefile. The jitter is a random point within the bounds of the tract the point fell in. James Eagan did the map, so I’ll fire off a quick map to Bader.  
+* 4) Called up James yesterday, he created the jittered point shapefile. The jitter is a random point within the bounds of the tract the point fell in. Jamie Eagan did the map, so I’ll fire off a quick map to Bader.  
 * 5) Started processing the dataset for MSM. Conservatively, early next week the file will be completed and ready to send out. 
 
 ####NETS
